# plpl

./: .gitignore  plpl.cabal  stack.yaml
app/: Main.hs
src/: Plot.hs
