name:                plpl
version:             0.1.0.0
synopsis:            plpl
description:         Please see README.md
homepage:            https://github.com/lesguillemets/plpl
license:             BSD3
license-file:        LICENSE
author:              lesguillemets
maintainer:          kgkacko+github@gmail.com
copyright:           2016 lesguillemets
category:            Graphics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Plot
  build-depends:       base >= 4.7 && < 5
                     , bytestring
  default-language:    Haskell2010

executable plplt
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , plpl
  default-language:    Haskell2010

test-suite plpl-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , plpl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/plpl
